--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
