--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
+    "react-flatpickr": "^4.0.11",
     "react-input-mask": "^3.0.0-alpha.2"
   },
   "devDependencies": {
